<resources>
    <string name="app_name">Tootrus</string>
    <string name="error">Error</string>
    <string name="instance_name">instance name</string>
    <string name="web_oauth">web oauth</string>
    <string name="oauth_code">oauth code</string>
    <string name="oauth">oauth</string>
    <string name="boosted_by">Boosted by %1$s</string>
    <string name="toot_hint">What\'s happening?</string>
    <string name="post_status">Post status</string>
    <string name="channel_id">default</string>
    <string name="channel_name">Notification</string>
    <string name="toot_now">Toot now....</string>
    <string name="toot">Toot!</string>
    <string name="favorited_status">%1$s favorited your status</string>
    <string name="boosted_status">%1$s boosted your status</string>
    <string name="followed_you">%1$s followed you</string>
    <string name="section_home">Home</string>
    <string name="section_notification">Notifications</string>
    <string name="section_local_timeline">Local timeline</string>
    <string name="open_drawer_content">Open drawer</string>
    <string name="close_drawer_content">Close drawer</string>
    <string name="favorited">Favorited</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="reblogged">Reblogged</string>
    <string name="favorite_count">Favorite: %1$d</string>
    <string name="boost_count">Boost: %1$d</string>
    <string name="profile_toot">Toot: %1$d</string>
    <string name="profile_follows">Follows: %1$d</string>
    <string name="profile_followers">Followers: %1$d</string>
    <string name="section_profile">Profile</string>
    <string name="spoiler_text">%1$s (Show more)</string>
    <string name="add_image">Add image</string>
    <string name="nsfw">NSFW</string>
    <string name="no_nsfw">No NSFW</string>
    <string name="write_your_warning_hire">Write your warning hire</string>
    <string name="cw">CW</string>
    <string name="section_favorite">Favorite</string>
    <string name="toot_shortcut_label">New Toot</string>
    <string name="profile_media">Media</string>
</resources>
